# nukeru

./: .gitignore  Cargo.toml  build.rs
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/nukeru/: MainActivity.kt
android/app/src/main/kotlin/com/nukeru/ui/: KiraApp.kt
android/app/src/main/kotlin/com/nukeru/ui/components/: BottomNav.kt
android/app/src/main/kotlin/com/nukeru/ui/screens/: AboutScreen.kt  HomeScreen.kt  SettingsScreen.kt
android/app/src/main/kotlin/com/nukeru/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
src/: lib.rs  verify.rs  zip_utils.rs
src/extractor/: mod.rs  operation.rs
src/parser/: manifest.rs  mod.rs
