[package]
name = "nukeru"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
byteorder = "1.5.0"
bzip2 = "0.6.1"
hex = "0.4.3"
jni = "0.22.4"
protobuf = "3.7.2"
rayon = "1.11.0"
sha2 = "0.11.0"
xz2 = "0.1.7"
zip = "8.5.1"

[build-dependencies]
protobuf-codegen = "3"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
